<resources>
    <string name="app_name">Pomodoro</string>
    <string name="long_break">Long Break</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="short_break">Short Break</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="pomodoro_start">25:00</string>
    <string name="stop">stop</string>
    <string name="save">Save</string>
    <string name="create_task">Benefits of creating tasks; It Makes it easier to Plan, Increases Efficiency, Helps with Focus, Facilitates Success, Boosts Motivation, Facilitates time Management.</string>
    <string name="lets_task">Let\'s create a task.🎉</string>
    <string name="congrats">Great job! You have successfully completed your Pomodoro study session.</string>
    <string name="break_over">Our break is over. Let\'s complete another pomodoro.</string>
</resources>